# dbiz_app

./: README.md
dbiz_app/: README.md  pyproject.toml
dbiz_app/dbiz_app/: api.py  hooks.py  modules.txt
dbiz_app/dbiz_app/dbiz_app/custom/: purchase_invoice.json  purchase_invoice_item.json  purchase_taxes_and_charges.json
dbiz_app/dbiz_app/dbiz_app/custom_hook/: custom_print_format_default.py  customer_custom.py  get_wo_by_workstaion_in_jobcard.py  gl_custom.py  ocr_api.py  purchase_invoice_custom.py  supplier_quotation_custom.py
dbiz_app/dbiz_app/dbiz_app/dashboard_chart_source/test/: test.json
dbiz_app/dbiz_app/dbiz_app/doctype/accounting_dimension_sample_project/: accounting_dimension_sample_project.js  accounting_dimension_sample_project.json  accounting_dimension_sample_project.py  test_accounting_dimension_sample_project.py
dbiz_app/dbiz_app/dbiz_app/doctype/accounting_dimensions_group/: accounting_dimensions_group.json  accounting_dimensions_group.py
dbiz_app/dbiz_app/dbiz_app/doctype/accounting_dimensions_sample_cost_center/: accounting_dimensions_sample_cost_center.js  accounting_dimensions_sample_cost_center.json  accounting_dimensions_sample_cost_center.py  test_accounting_dimensions_sample_cost_center.py
dbiz_app/dbiz_app/overrides/: cus_bom.py  cus_item.py  cus_job_card.py  cus_payment_entry.py  cus_pick_list.py  cus_production_plan.py  cus_purchase_invoice.py  cus_sales_order.py  cus_stock_entry.py  cus_work_order.py  cus_workflow.py
dbiz_app/dbiz_app/public/js/: custom.js  customer.js
dbiz_app/dbiz_app/translations/: vi.csv
(+392 files in other folders)
